--- a/impex/impex-build-sample.properties
+++ b/impex/impex-build-sample.properties
@@ -68,12 +68,16 @@ import.torque.database.user=kuldemo
 import.torque.database.schema=KULDEMO
 import.torque.database.password=kuldemo
 
+#post.import.liquibase.project=
 # after data import, have impex run liquibase scripts in this directory
-#post.import.liquibase.directory=
+# the scripts will be run in file name order within this directory
+post.import.liquibase.xml.directory=../../${post.import.workflow.project}/liquibase
 
 # after liquibase import, ingest workflow XML from the specified location
 
 # project from which the workflow should be imported
+# The existence of this property will be used to determine whether to
+# attempt to run the workflow XML import
 #post.import.workflow.project=
 # directory which contains the workflow XML - will be ingested in alpha order
 post.import.workflow.xml.directory=../../${post.import.workflow.project}/workflow
@@ -93,6 +97,7 @@ post.import.workflow.ingester.additional.command.line=-Ddatasource.ojb.platform=
 -Drice.ksb.batch.mode=true \
 -Ddont.filter.project.rice= \
 -Ddont.filter.project.spring.ide=
+
 
 #
 # Uncomment these for a local MySQL database
