--- a/impex/build.xml
+++ b/impex/build.xml
@@ -1094,6 +1094,11 @@ END;
 	</target>
 	
 	<target name="run-liquibase-post-import" depends="inittasks" if="post.import.liquibase.project">
+		<!--
+		<taskdef resource="liquibasetasks.properties">
+	        <classpath refid="torque-classpath"/>
+	    </taskdef>
+	    -->
     	<for param="file.name" keepgoing="false" parallel="false">
     	    <path>
     	    	  <!-- ensure that the files are run in name order -->
@@ -1104,17 +1109,28 @@ END;
     	    </path>
     		<sequential>
     		    <echo message="Running Liquibase ChangeLog: @{file.name}" />
+    			<!--
+    			<updateDatabase changelogfile="@{file.name}"
+    							classpathref="torque-classpath"
+    							driver="${import.torque.database.driver}"
+    							url="${import.torque.database.url}"
+			    				username="${import.torque.database.user}"
+			    				password="${import.torque.database.password}"
+			    				defaultschemaname="${import.torque.database.schema}" />
+    			-->
     			<java jar="../lib/liquibase-1.9.5.jar" 
     					failonerror="true" 
     					classpathref="torque-classpath" 
     					fork="true"
     					dir="${post.import.liquibase.xml.directory}">
     				<arg value="--driver=${import.torque.database.driver}"/>
+    				<arg value="--classpath=${basedir}/../drivers/ojdbc6.jar:${basedir}/../drivers/mysql-connector-java-5.0.5-bin.jar" />
     				<arg value="--url=${import.torque.database.url}"/>
 					<arg value="--username=${import.torque.database.user}"/>
 					<arg value="--password=${import.torque.database.password}"/>
     				<arg value="--defaultSchemaName=${import.torque.database.schema}" />
     				<arg value="--changeLogFile=@{file.name}" />
+    				<arg value="--logLevel=finest" />
     				<arg value="update" />
     			</java>
     		</sequential>
