Added to classpath to allow compiles.
git-svn-id: https://svn.kuali.org/repos/foundation/db-utils/branches/clover-integration@7191 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/clover/build.xml
+++ b/clover/build.xml
@@ -40,6 +40,9 @@
 		<fileset dir="${drivers.dir}">
     		<include name="*.jar"/>
 		</fileset>
+		<fileset dir="plugins/org.jetel.connection">
+    		<include name="*.jar"/>
+		</fileset>
 	</path>
 	
 	<!-- ================================= 
