Trying to get more information during the run.
git-svn-id: https://svn.kuali.org/repos/foundation/db-utils/branches/clover-integration@7192 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/impex/build.xml
+++ b/impex/build.xml
@@ -896,7 +896,7 @@ OUTPUT_DUMPS = false
 			pathrefid="graph.files.path"
 			/>
 		<fixcrlf srcdir="${torque.schema.dir}/data" includes="*.txt" eol="crlf" />
-		<run-graph propertyfile="${basedir}/cloveretl.properties">
+		<run-graph verbose="true" propertyfile="${basedir}/cloveretl.properties">
 			<fileset refid="graph.files" />
 		</run-graph>
 	</target>
