Updated impex tool to be able to export only part of a table's data.
git-svn-id: https://svn.kuali.org/repos/foundation/db-utils/branches/clover-integration@7194 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/impex/build.properties
+++ b/impex/build.properties
@@ -8,7 +8,9 @@ torque.project = kfs
 #export.torque.database.password=kuldba
 
 export.table.name.filter=.*
-export.excluded.tables=KRSB_MSG_PYLD_T,KRNS_LOOKUP_RSLT_T,KRIM_PND.*,.*_MT,KRSB_MSG_QUE_T,KRSB_SVC_DEF_T
+
+export.excluded.table.data.regex=${export.excluded.table.data.default}
+#export.data.additional.where.clause.file=
 export.start.table=
 
 #import.torque.database = mysql
