--- a/impex/impex-build-sample.properties
+++ b/impex/impex-build-sample.properties
@@ -50,12 +50,20 @@ export.torque.database.password=kuldba
 #export.table.name.filter=
 
 # A regex pattern for export graph files which should not be exported
-export.excluded.tables=KRSB_MSG_PYLD_T.*|KRNS_LOOKUP_RSLT_T.*|KRIM_PND.*|.*_MT_EXPORT.*|KRSB_MSG_QUE_T.*|KRSB_SVC_DEF_T.*|.*QRTZ.*TRIGGER.*
+export.excluded.table.data.regex=${export.excluded.table.data.default}
 
 # If the data export is interrupted, you can use this
-# property to restart the export from a given point
+# property to restart the data export from a given point
 # export.start.table=
 
+# Specify a table with this property which contains properties with additional
+# where clauses for the SELECT * FROM table_name statements used for exporting
+# data.  Can be used to export a subset of a table's values.
+# Each property should be named: TABLE_NAME_WHERE_CLAUSE (all upper case)
+# The value of the property should be a complete where clause:
+#    E.g., WHERE entity_id IN ( '1', '3' )
+# See the rice-bootstrap-table-where-clause.properties file for an example.
+#export.data.additional.where.clause.file=
 
 #
 # Modify these to match the database into which you are going to import
