Patch from glindhol enabling the option to parallel load data files
git-svn-id: https://svn.kuali.org/repos/foundation/db-utils/trunk@7197 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/impex/build.properties
+++ b/impex/build.properties
@@ -96,3 +96,5 @@ drivers.directory = lib
 drivers.file.pattern=ojdbc*.jar,mysql*.jar
 
 torque.schema.doc.includes=schema.xml
+
+import.torque.threads=1
