--- a/impex/impex-build.properties.sample
+++ b/impex/impex-build.properties.sample
@@ -18,24 +18,26 @@ torque.project = kfs
 # the module and tag to check out from SVN for satellite updates
 # these are to be used by a Satellite DBA for automating the refresh of the database
 #
-# these values are for a Kuali client rice base database 
+# these values are for a Kuali client rice base database
 svnroot=https://test.kuali.org/svn/
 svn.module=rice-cfg-dbs
 # use this Rice source for running with an embedded rice database (normal for development)
 svn.base=rice-kuali-client-db/branches/rice-release-1-0-1-br/
-# Use the branch below for installing the necessary empty tables when running a separate Rice instance 
+# Use the branch below for installing the necessary empty tables when running a separate Rice instance
 #svn.base=rice-client-db/branches/rice-release-1-0-1-br/
 torque.schema.dir=../../${svn.module}
 torque.sql.dir=${torque.schema.dir}/sql
 
 # then, to overlay a KFS/KC/KS database on the base rice database, use the parameters below
-# If these parameters are commented out, the impex process will only use the information above 
+# If these parameters are commented out, the impex process will only use the information above
 svnroot.2=https://test.kuali.org/svn/
 svn.module.2=kfs-cfg-dbs
 svn.base.2=trunk
 torque.schema.dir.2=../../${svn.module.2}
 torque.sql.dir.2=${torque.schema.dir.2}/sql
 
+# Number of parallel threads that will be started for the import process
+import.torque.threads=1
 
 #
 # where to find JDBC drivers
@@ -108,8 +110,8 @@ oracle.usermaint.user=kulusermaint
 oracle.usermaint.password=kulusermaint
 
 # SQL statements used for creating and dropping users
-# 
-# THESE SHOULD NOT NEED TO BE MODIFIED 
+#
+# THESE SHOULD NOT NEED TO BE MODIFIED
 
 # Oracle commands
 
@@ -125,8 +127,8 @@ mysql.create.user.command=CREATE USER '${import.torque.database.user}'@'localhos
 
 mysql.grant.command=GRANT ALL ON ${import.torque.database.schema}.* TO '${import.torque.database.user}'@'localhost' WITH GRANT OPTION
 
-mysql.create.user.commands=${mysql.create.user.command}    
-    
+mysql.create.user.commands=${mysql.create.user.command}
+
 mysql.create.schema.commands=CREATE DATABASE IF NOT EXISTS ${import.torque.database.schema} DEFAULT CHARACTER SET 'utf8' DEFAULT COLLATE 'utf8_bin'\n\
 /\n\
 ${mysql.grant.command}
