--- a/impex/build.xml
+++ b/impex/build.xml
@@ -1085,7 +1085,7 @@ END;
 			<arg value="-buildfile" />
 			<arg value="${post.import.workflow.ingester.launcher.ant.script}" />
 		    <arg value="${post.import.workflow.ingester.launcher.ant.target}" />
-		    <arg value="-D${post.import.workflow.ingester.launcher.ant.xml.directory.property}=${workflow.dir}" />
+		    <arg value="-D${post.import.workflow.ingester.launcher.ant.xml.directory.property}=${post.import.workflow.xml.directory}" />
 			<arg value="-D${post.import.workflow.ingester.jdbc.url.property}=${import.torque.database.url}" />
 			<arg value="-D${post.import.workflow.ingester.username.property}=${import.torque.database.user}" />
 			<arg value="-D${post.import.workflow.ingester.password.property}=${import.torque.database.password}" />
