--- a/kc/kcparm30/deploy.cfg
+++ b/kc/kcparm30/deploy.cfg
@@ -2,7 +2,7 @@ svnLocation=kc_project/trunk
 deployURL=test.kc.kuali.org:/opt/kc/parm30/webapps/kc-parm30.war
 configURL=test.kc.kuali.org:~/kuali/main/parm30/
 
-torque.schema.dir=${impex.conf.dir}/torque/kcparm30/mysql
+torque.schema.dir=${impex.conf.dir}/torque/kcparm30/oracle
 import.torque.database=oracle
 import.torque.database.driver=oracle.jdbc.OracleDriver
 import.torque.database.url=jdbc:oracle:thin:@localhost:1521:KUALI
