--- a/kc/krparm30/deploy.cfg
+++ b/kc/krparm30/deploy.cfg
@@ -1,4 +1,4 @@
-dbType=mysql
+dbType=oracle
 import.torque.database.user=kcparm30
 import.torque.database.schema=kcparm30
 import.torque.database.password=parm174kc
