Adding db deploy info to configurations
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5695 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kc/krwkly30/deploy.cfg
+++ b/kc/krwkly30/deploy.cfg
@@ -1,3 +1,8 @@
 svnLocation=rice/tags/1.0.2.1-KC-04
 deployURL=test.kc.kuali.org:/opt/kc/wkly30/webapps/kr-wkly30.war
 configURL=test.kc.kuali.org:~/kuali/main/wkly30/
+
+dbType=oracle
+import.torque.database.user=krwkly30
+import.torque.database.schema=krwkly30
+import.torque.database.password=wkly174kc
