--- a/kc/kcdly30/deploy.cfg
+++ b/kc/kcdly30/deploy.cfg
@@ -1,3 +1,8 @@
 svnLocation=kc_project/trunk
 deployURL=test.kc.kuali.org:/opt/kc/dly30/webapps/kc-dly30.war
 configURL=test.kc.kuali.org:~/kuali/main/dly30/
+
+dbType=oracle
+import.torque.database.user=kcdly30
+import.torque.database.schema=kcdly30
+import.torque.database.password=dly174kc
