--- a/kc/krdly30/deploy.cfg
+++ b/kc/krdly30/deploy.cfg
@@ -1,3 +1,8 @@
 svnLocation=rice/tags/1.0.2.1-KC-04
 deployURL=test.kc.kuali.org:/opt/kc/dly30/webapps/kr-dly30.war
 configURL=test.kc.kuali.org:~/kuali/main/dly30/
+
+dbType=oracle
+import.torque.database.user=krdly30
+import.torque.database.schema=krdly30
+import.torque.database.password=dly174kr
