--- a/kc/krwkly30/deploy.cfg
+++ b/kc/krwkly30/deploy.cfg
@@ -5,4 +5,4 @@ configURL=test.kc.kuali.org:~/kuali/main/wkly30/
 dbType=oracle
 import.torque.database.user=krwkly30
 import.torque.database.schema=krwkly30
-import.torque.database.password=wkly174kc
+import.torque.database.password=wkly174kr
